<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">



    <EditText
        android:id="@+id/editEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/edit_event_name"
        android:inputType="text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_select_year"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/year_options"
            android:gravity="center"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_select_department"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerDepartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/department_options"
            android:gravity="center"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#4CAF50"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#4CAF50"
            android:background="@color/colorPrimary"
            tools:ignore="ButtonOrder"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>
