<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundCol"
    tools:context="home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:sliderAnimationDuration="750"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorRadius="1dp"
                app:sliderIndicatorSelectedColor="#5A5858"
                app:sliderIndicatorUnselectedColor="#c1c1c1"
                app:sliderScrollTimeInSec="3"
                app:sliderStartAutoCycle="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsextrabold"
                android:text="@string/hello_kasc_family"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="14sp"
                android:layout_marginTop="12sp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/aboutclg"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="14sp"
                android:layout_marginTop="2sp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/aboutKASC"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="14dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:fontFamily="@font/poppinsemibold"
                android:text="@string/latest_events"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/eventsRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>


            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="14dp"
                android:background="@color/grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppinsemibold"
                    android:text="@string/contact_details"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/kongunadu_arts_and_science"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size1"
                    tools:ignore="SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/clg_address"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size1"
                    tools:ignore="SpUsage" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="12dp"
                    android:clipToPadding="false"
                    android:foregroundGravity="center"
                    android:overScrollMode="never"
                    android:padding="15dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/clg_phone"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size1"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/clgmap" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>