<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left"
    android:padding="16dp">

    <!-- Title "Book" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="29dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutSeminarHall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Left side with hall name and description -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seminar_hall"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_seminar"
                    android:textSize="12sp"
                    android:textColor="#666666" />

            </LinearLayout>

            <!-- Right side with hall image -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/auditorium"
                android:scaleType="fitXY" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Niveditha Hall -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutNivedithaHall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Left side with hall name and description -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hall_niveditha"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_niveditha"
                    android:textSize="12sp"
                    android:textColor="#666666" />

            </LinearLayout>

            <!-- Right side with hall image -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/auditorium"
                android:scaleType="fitXY" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Conference Hall -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutConferenceHall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hall_conference"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_conference"
                    android:textSize="12sp"
                    android:textColor="#666666" />

            </LinearLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/auditorium"
                android:scaleType="fitXY" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Auditorium -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutAuditorium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hall_auditorium"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_auditorium"
                    android:textSize="12sp"
                    android:textColor="#666666" />

            </LinearLayout>

            <!-- Right side with hall image -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/auditorium"
                android:scaleType="fitXY" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <!-- Navigation Drawer -->

</LinearLayout>
