<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Booking.BookingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedtoolbarCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appbarFeed"
                style="@style/ToolbarColoredBackArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundCol"
                app:title="Details "
                app:titleTextColor="@color/titleColor" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedtoolbarCL"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/textViewSelectedHall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_hall"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewHallName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewFacultyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/faculty_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewFacultyId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:text="@string/faculty_id"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/event_name"
                android:inputType="textMultiLine|textCapSentences"
                android:minHeight="100dp"
                android:textColor="@color/textColor"
                android:textColorHint="#78909C"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/select_timeslot"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerTimeSlots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/time_slot_options"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/select_year"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/year_options"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/select_department"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerDepartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/department_options"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectDate"
            android:layout_width="165dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/select_date"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="25dp"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text=""
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBook"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/book"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="35dp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>
